--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <span class="btn minimize"></span>
                 <span class="btn maximize"></span>
             </div>
-            <div class="terminal-title">yjerbi@guardia.fr:~$</div>
+            <div class="terminal-title">yjerbi@guardiaschool.fr:~$</div>
         </header>
  
 <!-- Main Content -->
@@ -24,7 +24,7 @@
             <section class="section intro">
                 <div class="command-line">
                     <span class="prompt">guest@Guardia:~$</span>
-                    <span class="command">whoami</span>
+                    <span class="command">Jerbi</span>
                 </div>
                 <div class="output">
                     <h1 class="glitch" data-text="Jerbi Yacine">Jerbi Yacine</h1>
@@ -43,7 +43,7 @@
                 <div class="output">
                     <h2>🕶️ [ABOUT_ME]</h2>
                     <blockquote>"Looking for work around Paris."</blockquote>
-                    <p>Étudiant en BTS SIO à l'ORT Montreuil, passionné par le développement et les architectures logicielles propres.</p>
+                    <p>Étudiant à Guardia, passionné par la cybersécurité et les architectures logicielles propres.</p>
                     <p><strong>Focus actuel :</strong></p>
                     <ul>
 <li>🐍 <strong>Python</strong> — scripts, automatisation, logique et outils système</li>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
             </section>
- <!-- Experience Section -->
+<!-- Experience Section -->
             <section class="section experience">
                 <div class="command-line">
                     <span class="prompt">guest@Guardia:~$</span>
@@ -95,7 +95,7 @@
                     <div class="timeline">
                         <div class="timeline-item">
                             <span class="date">[2025]</span>
-                            <h3>BTS SIO - ORT Montreuil</h3>
+                            <h3>Guardia School</h3>
  <p>Formation en Services Informatiques aux Organisations</p>
                         </div>
                         <div class="timeline-item">
@@ -111,8 +111,8 @@
  </div>
                         <div class="timeline-item">
                             <span class="date">[2024]</span>
-                            <h3>Stage - Service de Propreté de Colombes</h3>
-                            <p>Participation au service de propreté urbaine</p>
+                            <h3>Stage - Agence de voyage</h3>
+                            <p>Participation au Projet LostSoul</p>
                         </div>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                     <div class="contact-info">
                         <p>📧 Email: <a href="mailto:yjerbi@guardiaschool.fr">yjerbi@guardiaschool.fr</a></p>
                         <p>📍 Localisation: Paris, France</p>
-                        <p>🔗 GitHub: <a href="https://github.com/djael-ml" target="_blank">@Yacine-ml</a></p>
+                        <p>🔗 GitHub: <a href="https://github.com/YGuardia" target="_blank">@Yacine-ml</a></p>
                         <p>🎮 Studio: <a href="https://github.com/GameLys" target="_blank">GameLys</a></p>
                     </div>
                 </div>
